update password secret

--- a/mysql/templates/deployment.yaml
+++ b/mysql/templates/deployment.yaml
@@ -24,19 +24,13 @@ spec:
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: {{ .Values.mysql_pass }}
         - name: MYSQL_DATABASE
           value: wordpress
         - name: MYSQL_USER
           value: wordpress
         - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: {{ .Values.mysql_pass }}
         ports:
         - containerPort: 3306
           name: mysql
